--- a/EvaluationandResult.html
+++ b/EvaluationandResult.html
@@ -23,26 +23,34 @@
                     <a class="nav-link" href="javascript:void(0)"><span style="font-size: 20px;">Benchmark for Wild Animal Tracking</span></a>
                 </li> -->
                 <li class="nav-item" >
-                    <a class="nav-link " href="./index.html" >Home</a>
+                    <a class="nav-link " href="./index.html" >
+                      <img src="./img/home.svg" style="width: 20px;height: 20px;">
+                      Home
+                    </a>
                 </li>
                 <li class="nav-item" >
-                    <a class="nav-link" href="./Benchmark.html">Benchmark</a>
+                    <a class="nav-link" href="./Benchmark.html">
+                      <img src="./img/database.svg" style="width: 20px;height: 20px;">
+                      
+                      Benchmark
+                    </a>
                  </li>
                  <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Evaluation
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#The_evaluation_toolkit">The evaluation toolkit</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#Evaluated_trackers">Evaluated trackers</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#Overall_all_Performance">Overall all Performance</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#Evaluation_results">Evaluation results</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#Test_results">Test results</a></li>
-                  </ul>
+                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <img src="./img/briefcase.svg" style="width: 20px;height: 20px;">
+                      Evaluation
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#The_evaluation_toolkit">The evaluation toolkit</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#Evaluated_trackers">Evaluated trackers</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#Overall_all_Performance">Overall all Performance</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#Evaluation_results">Evaluation results</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#Test_results">Test results</a></li>
+                    </ul>
               </li>
             </ul>
           </div>
