--- a/Benchmark.html
+++ b/Benchmark.html
@@ -123,7 +123,7 @@
             </a>
           </li>
           <li>
-            <a href="https://drive.google.com/file/d/1E-9X7YhwQ1PcRkwNqlqZWDfit_GrToEP/view?usp=sharing"  target="_blank">
+            <a href="https://drive.google.com/file/d/1BhdSyMpxvLi5-t_96WHMI0YV9J35gtoN/view?usp=sharing"  target="_blank">
               <b>
                 <font style="vertical-align: inherit;">WATB_part3.zip</font>
               </b>
@@ -1180,9 +1180,9 @@
                     <span class="Sequence-attribute">IV,IPR,DEF,FM,SV,CM,SOB</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
-                    <img src="./img/TheGreatFox_0001.jpg" style="width: 150px;height: 150px;">
-                    <span class="Sequence-name">Penguin</span>
-                    <span class="Sequence-attribute">OPR,DEF,FM,SV,CM,POC,LR</span>
+                    <img src="./img/AlopexLagopus.jpg" style="width: 150px;height: 150px;">
+                    <span class="Sequence-name">AlopexLagopus</span>
+                    <span class="Sequence-attribute">IV,OPR,FM,SV,CM,OV,POC,FOC<br/>LR,MB</span>
                 </div>
             </div>
             <!-- 第 32 行 -->
