--- a/Benchmark.html
+++ b/Benchmark.html
@@ -130,7 +130,7 @@
             </a>
           </li>
           <li>
-            <a href="https://drive.google.com/file/d/1UGBWdJqIP-PglZAWVEKkJc44APJ7LYFi/view?usp=sharing"  target="_blank">
+            <a href="https://drive.google.com/file/d/1qRNoS5GaagVBohc_uhc4bk8zuRU6V9hK/view?usp=sharing"  target="_blank">
               <b>
                 <font style="vertical-align: inherit;">WATB_attribute_files.rar</font>
               </b>
@@ -141,14 +141,14 @@
         <sapn style="margin-left: 50px;">Challenge attribute set in Baidu Netdisk:(<b>WATB_attribute_files.rar</b>)</sapn>
         <ul style="padding-left: 100px;">
           <li>
-            <a href="https://pan.baidu.com/s/1bryNnICQQ5KC1KfBKuh7-g?pwd=5ld8" target="_blank">
+            <a href="https://pan.baidu.com/s/1XEgY49m3qOsEQ8y0rCLOJg?pwd=q4f6" target="_blank">
               <b>
                 <font style="vertical-align: inherit;">WATB.rar</font>
               </b>
             </a>
           </li>
           <li>
-            <a href="https://pan.baidu.com/s/1peaVBeHVpYR7_B7KQXdnXA?pwd=vkvl" target="_blank">
+            <a href="https://pan.baidu.com/s/10wYPsk-ckTiC3lDJnEYLvA?pwd=497w" target="_blank">
               <b>
                 <font style="vertical-align: inherit;">WATB_attribute_files.rar</font>
               </b>
