--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <li>All the sequences are labeled with 13 challenge attributes</li>
         </ul>
 
-        <span>If you want more information about <b>WATB</b>, Please check out the benchmark details at WATE 
+        <span>If you want more information about <b>WATB</b>, Please check out the benchmark details at WATB 
           <a href="./Benchmark.html">
             <b>
               <font style="vertical-align: inherit;">Benchmark</font>
@@ -187,7 +187,7 @@
         <hr/>
         <span>
           We refer to OTB data set and TOTB data set in the preliminary work of preparing to establish wildlife tracking benchmark. 
-          If you use watb for research, please consider cite the following papers:
+          If you use watb for research, please consider to cite the following papers:
         </span>
         <br/>
         <ul style="padding-left: 100px;">
