--- a/Benchmark.html
+++ b/Benchmark.html
@@ -137,7 +137,7 @@
             </a>
           </li>
         </ul>
-        <sapn style="margin-left: 50px;">And You can download data sets in Baidu Netdisk:(<b>WATE.rar</b>contains all Sequence)<br/></sapn>
+        <sapn style="margin-left: 50px;">And You can download data sets in Baidu Netdisk:(<b>WATB.rar</b>contains all Sequence)<br/></sapn>
         <sapn style="margin-left: 50px;">Challenge attribute set in Baidu Netdisk:(<b>WATB_attribute_files.rar</b>)</sapn>
         <ul style="padding-left: 100px;">
           <li>
