--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <ul style="padding-left: 100px;">
           <li>Comprises 206 sequences</li>
           <li>Covers different kinds of animals from land, sea and sky</li>
-          <li>The total frames of WATA is over 203,000</li>
+          <li>The total frames of WATB are over 203,000</li>
           <li>the average sequence length is over 980 frames</li>
           <li>All the sequences are labeled with 13 challenge attributes</li>
         </ul>
@@ -129,7 +129,7 @@
           page, evaluation toolkit and sample results at 
           <a href="./EvaluationandResult.html">
             <b>
-              <font style="vertical-align: inherit;">Evaluation and Result</font>
+              <font style="vertical-align: inherit;">Evaluation and Result</font><span>.</span>
             </b>
           </a>
         </span>
@@ -145,7 +145,7 @@
               <font style="vertical-align: inherit;">Benchmark</font>
             </b>
           </a>
-          page
+          page.
         </span>
         <div class="container" style="width: 80%;height: 264px;">
           <div class="row">
@@ -187,7 +187,7 @@
         <hr/>
         <span>
           We refer to OTB data set and TOTB data set in the preliminary work of preparing to establish wildlife tracking benchmark. 
-          If you use watb for research, please consider to cite the following papers:
+          If you use WATB for research, please consider to cite the following papers:
         </span>
         <br/>
         <ul style="padding-left: 100px;">
@@ -195,7 +195,7 @@
           <li>
             <font style="vertical-align: inherit;">
               Wu, Y., Lim, J., Yang, M.H.: Object tracking benchmark.<br>
-              IEEE Transactions on Pattern Analysis & Machine Intelligence 37(9), 1834–1848 (2015)
+              IEEE Transactions on Pattern Analysis & Machine Intelligence 37(9), 1834–1848 (2015).
             </font>
             <a href="https://doi.org/10.1109/TPAMI.2014.2388226" target="_blank">
               <b>
