--- a/Benchmark.html
+++ b/Benchmark.html
@@ -37,9 +37,9 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="#Tracker_benchmark_data">Tracker benchmark data</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#TB-206">TB-206</a></li>
+                      <li><a class="dropdown-item" href="#TB-206">Tracking Benchmark 206</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#Attributes">Attributes</a></li>
+                      <li><a class="dropdown-item" href="#Attributes">Challenge Attributes</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -105,8 +105,8 @@
         <!-- 下载链接 -->
         <h1 class="pt-2 h1-2" id="Tracker_benchmark_data">Tracker benchmark data</h1>
         <hr/>
-        <sapn style="margin-left: 50px;">Because our data sets is too large, it is divided into three parts in Google Drive:(<b>WATB_part1.zip、</b><b>WATB_part2.zip、</b><b>WATB_part3.zip、</b>)<br/></sapn>
-        <sapn style="margin-left: 50px;">Challenge attribute set in Google Drive:(<b>WATB_attribute_files.rar</b>)</sapn>
+        <sapn style="margin-left: 50px;">Because our data sets are too large, it is divided into three parts in Google Drive:(<b>WATB_part1.zip、</b><b>WATB_part2.zip、</b><b>WATB_part3.zip</b>).<br/></sapn>
+        <sapn style="margin-left: 50px;">Challenge attribute set in Google Drive:(<b>WATB_attribute_files.rar</b>).</sapn>
         <ul style="padding-left: 100px;">
           <li>
             <a href="https://drive.google.com/file/d/1QekHTqeO4xXOVTRKZWkzAzBt9aOSMVFR/view?usp=sharing"  target="_blank">
@@ -137,8 +137,8 @@
             </a>
           </li>
         </ul>
-        <sapn style="margin-left: 50px;">And You can download data sets in Baidu Netdisk:(<b>WATB.rar</b>contains all Sequence)<br/></sapn>
-        <sapn style="margin-left: 50px;">Challenge attribute set in Baidu Netdisk:(<b>WATB_attribute_files.rar</b>)</sapn>
+        <sapn style="margin-left: 50px;">And You can download data sets in Baidu Netdisk:(<b>WATB.rar</b> contains all sequences).<br/></sapn>
+        <sapn style="margin-left: 50px;">Challenge attributes in Baidu Netdisk:(<b>WATB_attribute_files.rar</b>).</sapn>
         <ul style="padding-left: 100px;">
           <li>
             <a href="https://pan.baidu.com/s/1XEgY49m3qOsEQ8y0rCLOJg?pwd=q4f6" target="_blank">
@@ -156,7 +156,7 @@
           </li>
         </ul>
         <!-- 显示206个数据集 -->
-        <h1 class="pt-2 h1-2" id="TB-206">TB-206</h1>
+        <h1 class="pt-2 h1-2" id="TB-206">Tracking Benchmark 206</h1>
         <hr/>
         <span>WATB contains 206 video sequences which covers different kinds of animals from land, sea and sky.Details are as follows:</span>
         <br/>
@@ -1311,7 +1311,7 @@
             </div>
         </div>
         <!-- 显示各个属性名称 -->
-        <h1 id="Attributes">Attributes</h1>
+        <h1 id="Attributes">Challenge Attributes</h1>
         <hr/>
         
         <div class="container">
