--- a/EvaluationandResult.html
+++ b/EvaluationandResult.html
@@ -155,7 +155,6 @@
         <p style="padding-left:25px">
           In order to evaluate existing trackers’ performance on <b>WATB</b>, we tested 38 tracking methods including CF and deep learning based trackers
           For CF trackers and deep trackers,we select the tracking methods with hand-crafted features and the recent popular Siamese trackers.
-          A total of 13 kinds are listed in the table below
         </p>
         <div class="container">
             <table class="table  table-hover ">
@@ -175,7 +174,7 @@
                       <th scope="row">Stark</th>
                       <td>ICCV21</td>
                       <td>Python</td>
-                      <td>CSK</td>
+                      <th scope="row">CSK</th>
                       <td>ECCV12</td>
                       <td>Matlab</td>
                     </tr>
@@ -184,7 +183,7 @@
                       <th scope="row">STMTrack</th>
                       <td>CVPR21</td>
                       <td>Python</td>
-                      <td>KCF</td>
+                      <th scope="row">KCF</th>
                       <td>PAMI14</td>
                       <td>Matlab</td>
                     </tr>
@@ -193,7 +192,7 @@
                       <th scope="row">TransT</th>
                       <td>CVPR21</td>
                       <td>Python</td>
-                      <td>SAMF</td>
+                      <th scope="row">SAMF</th>
                       <td>ECCVW14</td>
                       <td>Matlab</td>
                     </tr>
@@ -201,7 +200,7 @@
                       <th scope="row">Dimp50</th>
                       <td>ICCV19</td>
                       <td>Python</td>
-                      <td>DSST</td>
+                      <th scope="row">DSST</th>
                       <td>BMVA14</td>
                       <td>Matlab</td>
                     </tr>
@@ -209,7 +208,7 @@
                       <th scope="row">Dimp18</th>
                       <td>ICCV19</td>
                       <td>Python</td>
-                      <td>fDSST</td>
+                      <th scope="row">fDSST</th>
                       <td>PAMI16</td>
                       <td>Matlab</td>
                     </tr>
@@ -217,7 +216,7 @@
                       <th scope="row">SiamCAR</th>
                       <td>CVPR20</td>
                       <td>Python</td>
-                      <td>CF2</td>
+                      <th scope="row">CF2</th>
                       <td>ICCV15</td>
                       <td>Matlab</td>
                     </tr>
@@ -225,7 +224,7 @@
                       <th scope="row">SiamAttn</th>
                       <td>CVPR20</td>
                       <td>Python</td>
-                      <td>SRDCF</td>
+                      <th scope="row">SRDCF</th>
                       <td>ICCV15</td>
                       <td>Matlab</td>
                     </tr>
@@ -233,7 +232,7 @@
                       <th scope="row">ATOM</th>
                       <td>CVPR19</td>
                       <td>Python</td>
-                      <td>Staple</td>
+                      <th scope="row">Staple</th>
                       <td>CVPR16</td>
                       <td>Matlab</td>
                     </tr>
@@ -241,7 +240,7 @@
                       <th scope="row">SiamRPN++</th>
                       <td>CVPR19</td>
                       <td>Python</td>
-                      <td>CFWCR</td>
+                      <th scope="row">CFWCR</th>
                       <td>ICCVW17</td>
                       <td>Matlab</td>
                     </tr>
@@ -249,7 +248,7 @@
                       <th scope="row">SiamRPN</th>
                       <td>CVPR18</td>
                       <td>Python</td>
-                      <td>BACF</td>
+                      <th scope="row">BACF</th>
                       <td>ICCV17</td>
                       <td>Matlab</td>
                     </tr>
@@ -257,7 +256,7 @@
                       <th scope="row">SiamMask</th>
                       <td>CVPR19</td>
                       <td>Python</td>
-                      <td>ECO</td>
+                      <th scope="row">ECO</th>
                       <td>CVPR17</td>
                       <td>Matlab</td>
                     </tr>
@@ -265,7 +264,7 @@
                       <th scope="row">SiamGAT</th>
                       <td>CVPR21</td>
                       <td>Python</td>
-                      <td>STRCF</td>
+                      <th scope="row">STRCF</th>
                       <td>CVPR18</td>
                       <td>Matlab</td>
                     </tr>
@@ -273,7 +272,7 @@
                       <th scope="row">SiamBAN</th>
                       <td>CVPR20</td>
                       <td>Python</td>
-                      <td>SKSCF</td>
+                      <th scope="row">SKSCF</th>
                       <td>PAMI18</td>
                       <td>Matlab</td>
                     </tr>
@@ -281,7 +280,7 @@
                       <th scope="row">HiFT</th>
                       <td>ICCV21</td>
                       <td>Python</td>
-                      <td>DSARCF</td>
+                      <th scope="row">DSARCF</th>
                       <td>TIP19</td>
                       <td>Matlab</td>
                     </tr>
@@ -289,7 +288,7 @@
                       <th scope="row">SiamFC</th>
                       <td>ECCV16</td>
                       <td>Python</td>
-                      <td>LADCF</td>
+                      <th scope="row">LADCF</th>
                       <td>TIP19</td>
                       <td>Matlab</td>
                     </tr>
@@ -297,7 +296,7 @@
                       <th scope="row">ACSDCF_HC</th>
                       <td>IJCV21</td>
                       <td>Matlab</td>
-                      <td>ASRCF</td>
+                      <th scope="row">ASRCF</th>
                       <td>CVPR19</td>
                       <td>Matlab</td>
                     </tr>
@@ -305,7 +304,7 @@
                       <th scope="row">MRCF</th>
                       <td>TIE22</td>
                       <td>Matlab</td> 
-                      <td>GFSDCF</td>
+                      <th scope="row">GFSDCF</th>
                       <td>ICCV19</td>
                       <td>Matlab</td>
                     </tr>
@@ -313,7 +312,7 @@
                       <th scope="row">MSCF</th>
                       <td>ICRA21</td>
                       <td>Matlab</td>
-                      <td>ARCF</td>
+                      <th scope="row">ARCF</th>
                       <td>ICCV19</td>
                       <td>Matlab</td>
                     </tr>
@@ -321,7 +320,7 @@
                       <th scope="row">AutoTrack</th>
                       <td>CVPR20</td>
                       <td>Matlab</td>
-                      <td>DRCF</td>
+                      <th scope="row">DRCF</th>
                       <td>TGRS20</td>
                       <td>Matlab</td>
                     </tr>
@@ -686,7 +685,7 @@
         <p style="padding-left: 25px;">
           The normalized precision scores of the evaluated trackers over 13 attributes are given in following table. 
           The results of deep trackers and CF trackers are separated and listed in different parts of the table.
-          For deep trackers, the best three results are shown in 
+          For deep trackers, the best three results are shown in. 
           <span class="test-result-red">red</span>, 
           <span class="test-result-blue">blue</span> and 
           <span class="test-result-green">green</span>, respectively, while the best three CF trackers are shown in italic style using similar colors to deep trackers.
@@ -2364,3 +2363,4 @@
     <script src="js/jquery-3.2.1.min.js"></script>
 </body>
 </html>
+
