--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
 
         <span class="span3">Our tracking benchmarks include：<br/></span>
         <ul style="padding-left: 100px;">
-          <li>Comprises 206 sequences</li>
-          <li>Covers different kinds of animals from land, sea and sky</li>
-          <li>The total frames of WATB are over 203,000</li>
-          <li>the average sequence length is over 980 frames</li>
-          <li>All the sequences are labeled with 13 challenge attributes</li>
+          <li>Comprises 206 sequences.</li>
+          <li>Covers different kinds of animals from land, sea and sky.</li>
+          <li>The total frames of WATB are over 203,000.</li>
+          <li>the average sequence length is over 980 frames.</li>
+          <li>All the sequences are labeled with 13 challenge attributes.</li>
         </ul>
 
         <span>If you want more information about <b>WATB</b>, Please check out the benchmark details at WATB 
