--- a/EvaluationandResult.html
+++ b/EvaluationandResult.html
@@ -155,6 +155,7 @@
         <p style="padding-left:25px">
           In order to evaluate existing trackers’ performance on <b>WATB</b>, we tested 38 tracking methods including CF and deep learning based trackers
           For CF trackers and deep trackers,we select the tracking methods with hand-crafted features and the recent popular Siamese trackers.
+          Details are shown in the table below:
         </p>
         <div class="container">
             <table class="table  table-hover ">
