--- a/index.html
+++ b/index.html
@@ -129,17 +129,17 @@
           page, evaluation toolkit and sample results at 
           <a href="./EvaluationandResult.html">
             <b>
-              <font style="vertical-align: inherit;">Evaluation and Result</font><span>.</span>
+              <font style="vertical-align: inherit;">Evaluation</font><span>.</span>
             </b>
           </a>
         </span>
         <h1 class="pt-2 h1-2" id="Video">Video</h1>
         <hr/>
         <span>
-          We selected three labeled video sequences from 206 data sets for display.
+          We selected three labeled video sequences from 206 wild-animal-sequence for display.
           These three videos represent sea, land and air respectively.
-          These datasets are annotated manually, and then the annotated datasets are reviewed.
-          For more data set sequences, please see 
+          These wild-animal-sequence are annotated manually, and then the annotated wild-animal-sequence are reviewed.
+          For more wild-animal-sequence, please see 
           <a href="./Benchmark.html">
             <b>
               <font style="vertical-align: inherit;">Benchmark</font>
