--- a/Benchmark.html
+++ b/Benchmark.html
@@ -105,8 +105,8 @@
         <!-- 下载链接 -->
         <h1 class="pt-2 h1-2" id="Tracker_benchmark_data">Tracker benchmark data</h1>
         <hr/>
-        <sapn style="margin-left: 50px;">Because our data sets are too large, it is divided into three parts in Google Drive:(<b>WATB_part1.zip、</b><b>WATB_part2.zip、</b><b>WATB_part3.zip</b>).<br/></sapn>
-        <sapn style="margin-left: 50px;">Challenge attribute set in Google Drive:(<b>WATB_attribute_files.rar</b>).</sapn>
+        <sapn style="margin-left: 50px;">Because our wild-animal-sequence are too large, it is divided into three parts in Google Drive:(<b>WATB_part1.zip、</b><b>WATB_part2.zip、</b><b>WATB_part3.zip</b>).<br/></sapn>
+        <sapn style="margin-left: 50px;">Challenge attributes in Google Drive:(<b>WATB_attribute_files.rar</b>).</sapn>
         <ul style="padding-left: 100px;">
           <li>
             <a href="https://drive.google.com/file/d/1QekHTqeO4xXOVTRKZWkzAzBt9aOSMVFR/view?usp=sharing"  target="_blank">
@@ -137,7 +137,7 @@
             </a>
           </li>
         </ul>
-        <sapn style="margin-left: 50px;">And You can download data sets in Baidu Netdisk:(<b>WATB.rar</b> contains all sequences).<br/></sapn>
+        <sapn style="margin-left: 50px;">And You can download wild-animal-sequence in Baidu Netdisk:(<b>WATB.rar</b> contains all sequences).<br/></sapn>
         <sapn style="margin-left: 50px;">Challenge attributes in Baidu Netdisk:(<b>WATB_attribute_files.rar</b>).</sapn>
         <ul style="padding-left: 100px;">
           <li>
