--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <!-- 导航栏 -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top" >
         <div class="container">
-          <a class="navbar-brand" href="javascript:void(0)"><span>WATB</span></a>
+          <a class="navbar-brand" href="javascript:void(0)">
+            <!-- <img src="./img/logo.jpg" style="width: 85px; height: 25px;"> -->
+            <span>WATB</span>
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -108,7 +111,8 @@
     <div class="container body-body bg-light navbar-light">
         <h1 class="pt-2" id="Introduction">Introduction</h1>
         <hr/>
-        <span>The existing benchmarks do not include enough wild-animal-sequence to evaluate the performance of the tracker. So we build the first benchmark for wild animal tracking(<b>WATB</b>).<br/></span>
+        <!-- <span>The existing benchmarks do not include enough wild-animal-sequence to evaluate the performance of the tracker. So we build the first benchmark for wild animal tracking(<b>WATB</b>).<br/></span> -->
+        <span>We propose the first benchmark, named Wild Animal Tracking Benchmark (<b>WATB</b>), to encourage further progress of research and applications of visual object tracking in wildlife protection.<br/></span>
         <!-- <span>Join visual-tracking Google groups for further updates, discussions, or QnAs<br/></span> -->
 
         <span class="span3">Our tracking benchmarks include：<br/></span>
