--- a/Benchmark.html
+++ b/Benchmark.html
@@ -130,7 +130,7 @@
             </a>
           </li>
           <li>
-            <a href="https://drive.google.com/file/d/1qRNoS5GaagVBohc_uhc4bk8zuRU6V9hK/view?usp=sharing"  target="_blank">
+            <a href="https://drive.google.com/file/d/1GLekNQbhJkkErf74V-s6nufQh2bB7UdC/view?usp=share_link"  target="_blank">
               <b>
                 <font style="vertical-align: inherit;">WATB_attribute_files.rar</font>
               </b>
@@ -148,7 +148,7 @@
             </a>
           </li>
           <li>
-            <a href="https://pan.baidu.com/s/10wYPsk-ckTiC3lDJnEYLvA?pwd=497w" target="_blank">
+            <a href="https://pan.baidu.com/s/1jGjWeammIWJWqeo7UVLNAQ?pwd=8yoa" target="_blank">
               <b>
                 <font style="vertical-align: inherit;">WATB_attribute_files.rar</font>
               </b>
